@@ -52,7 +52,11 @@ FIXXREF_OPTIONS=
 HFILE_GLOB=
 CFILE_GLOB=
 
-# Header files to ignore when scanning.
+# Extra header to include when scanning, which are not under DOC_SOURCE_DIR
+# e.g. EXTRA_HFILES=$(top_srcdir}/contrib/extra.h
+EXTRA_HFILES=
+
+# Header files to ignore when scanning. Use base file name, no paths
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
 IGNORE_HFILES=
 
