@@ -1,5 +1,14 @@
 2009-02-26  Stefan Kost  <ensonic@users.sf.net>
 
+	* doc/gtkdoc.dot:
+	  Improve. scan only checks headers, while mkdb scans sources and
+	  headers.
+
+	* examples/Makefile.am:
+	  Document more variables.
+
+2009-02-26  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-scangobj.in:
 	* gtkdoc-scanobj.in:
 	  There is some gtk specific stuff there, which we probably want to kick
